--- a/ref2.bib
+++ b/ref2.bib
@@ -8,14 +8,12 @@
  
 %%%%% ARTICLES
 	
-% introduction of bootstrap
-	@article{boot1,
-		author	= {Efron, Bradley},
-		title	= {Bootstrap Methods: Another Look at the Jackknife},
-		year	= {1979},
-		journal	= {The Annals of Statistics},
-		volume	= {7},
-		pages	= {1 - 26}
+	% Semi-Parametric Resampling Approach to determine optimal CVaR Portfolios
+	@article{port1,
+		author = {Petukhina, Alla and Sprünken, Erin},
+		title = {Evaluation of multi-asset investment strategies with digital assets},
+		year = {2021},
+		journal = {Digital Finance},
 	}
 	
 	% Nonparametric bootstrap instead of WALD or ANOVA, useful for small sample sizes
@@ -57,35 +55,6 @@
 		volume	= {53},
 		pages	= {384 - 359}
 	}
-	
-	% Wild bootstrap introduction
-	@article{wboot1,
-		author  = {Wu, C. F. J.},
-		journal = {Annals of Statistics},
-		pages   = {1261--1295},
-		title   = {Jackknife, Bootstrap and Other Resampling Methods in Regression Analysis},
-		volume  = {14},
-		year    = {1986}
-	}	
-	
-	% Wild bootstrap for reggression coefficient is consistent under mild moment conditions
-	@article{boot6,
-		author	= {Zuzana Prášková},
-		title	= {Bootstrap in Nonstationary Autoregression},
-		year	= {2002},
-		journal	= {Kybernetika},
-		volume	= {38},
-		pages	= {389 - 404}
-	}
-	@article{wboot2,
-		author  = {Davidson, Russel and Flachaire, Emmanuel},
-		journal = {Journal of Econometrics},
-		pages   = {162 - 169},
-		title   = {The wild bootstrap, tamed at last},
-		volume  = {146},
-		year    = {2008}
-	}
- 	
  	% Bootstrap for stationary timeseries
  	@article{boot7,
  		author	= {Politis, Dimitris N. and Romano, Joseph P.},
@@ -96,22 +65,21 @@
  		pages	= {2031 - 2050}
  	}
  	
- 	% Wild bootstrap for heteroscedastic/ non identical RV better
- 	@article{boot8,
- 		author  = {Mammen, Enno},
- 		title	= {Bootstrap, wild bootstrap and asymptotic normality},
- 		year	= {1992},
- 		journal = {Probability Theory and Related Fields},
- 		volume  = {93},
- 		pages   = {439 - 455}
- 	}
- 	
- 	% Bootstrap Estimate is asymptotic minimax for a normal statistic
- 	@article{boot8,
- 		author	= {Beran, Rudolf},
- 		title	= {Estimated Sampling Distributions: The Bootstrap and Competitors},
- 		year	= {1982},
- 		journal = {The Annals of Statistics},
- 		volume  = {10},
- 		pages	= {212 - 225}
- 	}
+% Bagging
+	@article{bag1,
+		author = {Breiman, Leo},
+		title = {Bagging predictors},
+		year = {1996},
+		journal = {Machine Learning},
+		volume = {24},
+		pages = {123-140}
+	}
+	
+	@article{randfor1,
+		author = {Breiman, Leo},
+		title = {Random Forests},
+		year = {2001},
+		journal = {Machine Learning},
+		volume = {45},
+		pages = {5-32}
+	}
